--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
+@font-face {
+  font-family: 'VT323';
+  font-style: normal;
+  font-weight: 400;
+  src: url('https://fonts.cdnfonts.com/s/15755/VT323-Regular.woff') format('woff');
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'VT323', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,4 +19,80 @@ a {
 
 * {
   box-sizing: border-box;
+  font-size: large;
+}
+
+/* custom scrollbar - only on desktop view */
+@media only screen and (min-device-width: 575px) {
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 5px;
+  }
+
+  /* Dark */
+  /* Handle */
+  .dark-scroll::-webkit-scrollbar-thumb {
+    background: #3f474f;
+    opacity: 0.5;
+  }
+
+  /* Handle on hover */
+  .dark-scroll::-webkit-scrollbar-thumb:hover {
+    background: #353b41;
+  }
+
+  /* Track */
+  .dark-scroll::-webkit-scrollbar-track {
+    background: #F1F1F1;
+    opacity: 0.5;
+  }
+
+  /* The track NOT covered by the handle. */
+  .dark-scroll::-webkit-scrollbar-track-piece {
+    background: #5e6a75;
+    opacity: 0.5;
+  }
+
+  /* Corner */
+  .dark-scroll:-webkit-scrollbar-corner {
+    background: #999;
+  }
+
+  /* Resizer */
+  .dark-scroll::-webkit-resizer {
+    background: #111;
+  }
+
+  /* Light */
+  /* Handle */
+  .light-scroll::-webkit-scrollbar-thumb {
+    background: #145DA0;
+  }
+
+  /* Handle on hover */
+  .light-scroll::-webkit-scrollbar-thumb:hover {
+    background: #0C2D48;
+  }
+
+  /* Track */
+  .light-scroll::-webkit-scrollbar-track {
+    background: #F1F1F1;
+  }
+
+  /* The track NOT covered by the handle. */
+  .light-scroll::-webkit-scrollbar-track-piece {
+    background: #b7b9b9;
+  }
+
+  /* Corner */
+  .light-scroll::-webkit-scrollbar-corner {
+    background: #999;
+  }
+
+  /* Resizer */
+  .light-scroll::-webkit-resizer {
+    background: #111;
+  }
 }
