--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,54 @@ a {
   font-size: large;
 }
 
+/* searchbar in nav */
+.nav-search {
+  width: 80%;
+  -webkit-transition: width 0.3s;
+  -moz-transition: width 0.3s;
+  -ms-transition: width 0.3s;
+  -o-transition: width 0.3s;
+  transition: width 0.3s;
+  float: right;
+}
+
+.nav-search:focus {
+  width: 100%;
+}
+
+/* custom links */
+.subtle-link {
+  display: inline-block;
+  position: relative;
+  color: inherit;
+  text-decoration: none;
+}
+
+.subtle-link:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0087ca;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.subtle-link:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+@media (max-width: 992px) {
+  .nav-search {
+    width: 100%;
+    float: none;
+  }
+}
+
 /* custom scrollbar - only on desktop view */
 @media only screen and (min-device-width: 575px) {
 
