--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,8 @@ a {
   -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
   mask-image: linear-gradient(180deg, #000 60%, transparent);
   margin-top: 9px;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .card-tags-container {
