--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,18 @@ a {
 .card-lists {
   margin: 1rem;
   width: 22rem;
+  overflow: hidden !important;
+  transform: scale(1);
+  transition: all .3s ease-in-out;
+}
+
+.card-lists:hover {
+  transform: scale(1.01);
+}
+
+.thumbnail-wrapper {
+  max-height: 195px;
+  overflow: hidden !important;
 }
 
 .card-desc {
