api get all tags, search with tags

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,6 +144,10 @@ a {
   float: right;
 }
 
+.search-tags {
+  margin-top: .5rem;
+}
+
 /* custom links */
 .link-nodecor {
   color: inherit !important;
