--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,11 @@ a {
   font-size: small;
 }
 
+.light-svg {
+  margin-bottom: 7px;
+  cursor: pointer;
+}
+
 /* --------------------------------------- */
 /* nav */
 .navbar-brand {
