--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,11 +13,6 @@ body {
   scroll-behavior: smooth;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
   font-size: large;
@@ -142,6 +137,7 @@ a {
   font-size: initial;
 }
 
+/* --------------------------------------- */
 /* searchbar */
 .search-shrink {
   width: 85%;
@@ -198,6 +194,16 @@ a {
 }
 
 /* --------------------------------------- */
+/* markdown */
+.markdown-body {
+  box-sizing: border-box;
+  min-width: 200px;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 45px;
+}
+
+/* --------------------------------------- */
 /* media queries */
 @media (max-width: 992px) {
   .search-shrink {
@@ -213,6 +219,12 @@ a {
   .darkmode-toggler {
     right: 70px;
     top: 0px;
+  }
+}
+
+@media (max-width: 767px) {
+  .markdown-body {
+    padding: 15px;
   }
 }
 
