--- a/styles/markdown-style.css
+++ b/styles/markdown-style.css
@@ -7,6 +7,24 @@
 	text-align: center;
 }
 
+.post-content .title h1 {
+	line-height: 1;
+}
+
+.post-stats {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+}
+
+.post-stats p {
+	margin: 0 auto;
+}
+
+.icon-spacer {
+	padding-left: 1rem;
+}
+
 /* markdown */
 .markdownBody {
 	max-width: 700px;
@@ -44,7 +62,7 @@
 .markdownBody .anchor-link:hover:before {
 	position: absolute;
 	content: "#";
-	padding-top: 7px;
+	padding-top: 2px;
 	margin-left: -20px;
 }
 
