--- a/styles/markdown-style.css
+++ b/styles/markdown-style.css
@@ -11,6 +11,16 @@
 	line-height: 1;
 }
 
+.scroll-progress {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background-color: #f5f5f5;
+	z-index: 9999;
+}
+
 .post-stats {
 	display: flex;
 	align-items: center;
@@ -50,8 +60,30 @@
 	margin-top: -29rem;
 }
 
-.pointer-cursor {
-	cursor: pointer;
+.md-wrapper .wrap-progress {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.md-wrapper .wrap-progress .wrapper {
+	margin-left: -3rem;
+}
+
+.md-wrapper .wrap-progress .wrapper .progress-bar {
+	position: fixed;
+	margin-top: -22rem;
+	margin-right: 10rem;
+	width: 2px;
+	height: 500px;
+	background: #ccc;
+}
+
+.md-wrapper .wrap-progress .wrapper .progress-bar .progress {
+	max-height: 500px;
+	height: 0%;
+	width: 2px;
+	background: #464692;
 }
 
 .hover-effect {
