dashboard, shorthand check admin, js -> jsx

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,10 @@ body {
   cursor: pointer;
 }
 
+.center-vertical-horizontal {
+  margin: 150px auto;
+}
+
 /* --------------------------------------- */
 /* nav */
 .navbar-brand {
