--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1,139 +1,161 @@
+/* ------------------------- */
+/* main */
 .admin-main {
-    background: #222D32;
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	background: #222D32;
+	z-index: -1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
+/* ------------------------- */
+/* index-dashboard */
+.dashboard.inside {
+	padding: 1rem;
+}
+
+.dashboard.action-table {
+	margin-left: 10px;
+}
+
+/* ------------------------- */
+/* login panel */
 .panel-login.login-wrap {
-    margin: auto;
-    padding-top: 6rem;
+	margin: auto;
+	padding-top: 6rem;
 }
 
 .panel-login.login-box {
-    margin-top: 75px;
-    height: auto;
-    background: #1A2226;
-    text-align: center;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+	margin-top: 75px;
+	height: auto;
+	background: #1A2226;
+	text-align: center;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .panel-login.login-key {
-    height: 100px;
-    font-size: 80px;
-    line-height: 100px;
-    background: -webkit-linear-gradient(#27EF9F, #0DB8DE);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	height: 100px;
+	font-size: 80px;
+	line-height: 100px;
+	background: -webkit-linear-gradient(#27EF9F, #0DB8DE);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .panel-login.login-title {
-    margin-top: 15px;
-    text-align: center;
-    font-size: 30px;
-    letter-spacing: 2px;
-    margin-top: 15px;
-    color: #ECF0F5;
+	margin-top: 15px;
+	text-align: center;
+	font-size: 30px;
+	letter-spacing: 2px;
+	margin-top: 15px;
+	color: #ECF0F5;
 }
 
 .panel-login.login-form {
-    margin-top: 25px;
-    text-align: left;
+	margin-top: 25px;
+	text-align: left;
 }
 
 input[type=text].panel-login {
-    background-color: #1A2226;
-    border: none;
-    border-bottom: 2px solid #0DB8DE;
-    border-top: 0px;
-    border-radius: 0px;
-    outline: 0;
-    margin-bottom: 20px;
-    padding-left: 0px;
-    color: #ECF0F5;
+	background-color: #1A2226;
+	border: none;
+	border-bottom: 2px solid #0DB8DE;
+	border-top: 0px;
+	border-radius: 0px;
+	outline: 0;
+	margin-bottom: 20px;
+	padding-left: 0px;
+	color: #ECF0F5;
 }
 
 input[type=password].panel-login {
-    background-color: #1A2226;
-    border: none;
-    border-bottom: 2px solid #0DB8DE;
-    border-top: 0px;
-    border-radius: 0px;
-    outline: 0;
-    padding-left: 0px;
-    margin-bottom: 20px;
-    color: #ECF0F5;
+	background-color: #1A2226;
+	border: none;
+	border-bottom: 2px solid #0DB8DE;
+	border-top: 0px;
+	border-radius: 0px;
+	outline: 0;
+	padding-left: 0px;
+	margin-bottom: 20px;
+	color: #ECF0F5;
 }
 
 .panel-login.form-group {
-    margin-bottom: 40px;
-    outline: 0px;
+	margin-bottom: 40px;
+	outline: 0px;
 }
 
 .panel-login.form-control:focus {
-    border-color: inherit;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-bottom: 2px solid #0DB8DE;
-    outline: 0;
-    background-color: #1A2226;
-    color: #ECF0F5;
+	border-color: inherit;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	border-bottom: 2px solid #0DB8DE;
+	outline: 0;
+	background-color: #1A2226;
+	color: #ECF0F5;
 }
 
 
 input.panel-login:focus {
-    outline: none;
-    box-shadow: 0 0 0;
+	outline: none;
+	box-shadow: 0 0 0;
 }
 
 label.panel-login {
-    margin-bottom: 0px;
+	margin-bottom: 0px;
 }
 
 .panel-login.form-control-label {
-    color: #6C6C6C;
-    letter-spacing: 1px;
+	color: #6C6C6C;
+	letter-spacing: 1px;
 }
 
 .panel-login.btn-outline-primary {
-    border-color: #0DB8DE;
-    color: #0DB8DE;
-    border-radius: 0px;
-    letter-spacing: 1px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+	border-color: #0DB8DE;
+	color: #0DB8DE;
+	border-radius: 0px;
+	letter-spacing: 1px;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .panel-login.btn-outline-primary:hover {
-    background-color: #0DB8DE;
-    right: 0px;
+	background-color: #0DB8DE;
+	right: 0px;
 }
 
 .panel-login.login-btm {
-    float: left;
+	float: left;
 }
 
 .panel-login.login-button {
-    padding-right: 0px;
-    text-align: right;
-    margin-bottom: 25px;
+	padding-right: 0px;
+	text-align: right;
+	margin-bottom: 25px;
 }
 
 .panel-login.login-text {
-    text-align: left;
-    padding-left: 0px;
-    color: #A2A4A4;
+	text-align: left;
+	padding-left: 0px;
+	color: #A2A4A4;
 }
 
 .panel-login.loginbttm {
-    padding: 0px;
-    position: relative;
+	padding: 0px;
+	position: relative;
 }
 
 .panel-login#login {
-    position: absolute;
-    right: 0;
+	position: absolute;
+	right: 0;
+}
+
+/* ------------------------- */
+/* media queries */
+@media (max-width: 1400px) {
+	.dashboard.action-table {
+		margin-left: 0;
+	}
 }
