--- a/styles/markdown-style.css
+++ b/styles/markdown-style.css
@@ -157,7 +157,7 @@
 	color: inherit;
 }
 
-.markdownBody .anchor-link:hover:before {
+.markdownBody .anchor-link:hover::before {
 	position: absolute;
 	content: "#";
 	padding-top: 2px;
@@ -246,6 +246,7 @@
 	top: 5px;
 }
 
+/* ------------------ */
 /* animation */
 @keyframes ripple {
 	to {
@@ -254,6 +255,7 @@
 	}
 }
 
+/* ------------------ */
 /* media queries */
 @media (max-width: 945px) {
 	.md-wrapper .wrap-stats .stats {
