--- a/styles/admin.css
+++ b/styles/admin.css
@@ -20,6 +20,42 @@
 	margin-left: 10px;
 }
 
+.delete-popup {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	z-index: 9999;
+}
+
+.delete-popup .popup-content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: white;
+	padding: 1rem;
+	border-radius: 0.5rem;
+	width: 30rem;
+	height: 11rem;
+}
+
+.delete-popup .popup-content h1 {
+	text-align: center;
+	margin-bottom: 1rem;
+}
+
+.delete-popup .popup-content p {
+	text-align: center;
+}
+
+.delete-popup .popup-content .btn-group {
+	display: flex;
+	justify-content: space-around;
+}
+
 /* ------------------------- */
 /* login panel */
 .panel-login.login-wrap {
