--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1,13 +1,11 @@
 /* ------------------------- */
 /* main */
-.admin-main {
+.admin-dashboard {
 	background: #222D32;
-	z-index: -1;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+}
+
+.admin-dashboard.bg-dark {
+	background: #222D32 !important;
 }
 
 /* ------------------------- */
@@ -42,6 +40,22 @@
 	height: 13.5rem;
 }
 
+.preview-popup .popup-content {
+	position: relative;
+	background: white;
+	padding: 1rem;
+	border-radius: 0.5rem;
+	/* position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: white;
+	padding: 1rem;
+	border-radius: 0.5rem;
+	width: 30rem;
+	height: 13.5rem; */
+}
+
 .delete-popup .popup-content h1 {
 	text-align: center;
 	margin-bottom: 1rem;
@@ -51,6 +65,7 @@
 	text-align: center;
 }
 
+.preview-popup .popup-content .btn-group,
 .delete-popup .popup-content .btn-group {
 	display: flex;
 	justify-content: space-around;
