--- a/styles/admin.css
+++ b/styles/admin.css
@@ -4,6 +4,7 @@
 	background: #222D32;
 }
 
+.admin-dashboard.bg-light,
 .admin-dashboard.bg-dark {
 	background: #222D32 !important;
 }
@@ -45,15 +46,6 @@
 	background: white;
 	padding: 1rem;
 	border-radius: 0.5rem;
-	/* position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background: white;
-	padding: 1rem;
-	border-radius: 0.5rem;
-	width: 30rem;
-	height: 13.5rem; */
 }
 
 .delete-popup .popup-content h1 {
