--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,6 +63,10 @@ body {
   cursor: pointer;
 }
 
+.modal {
+  z-index: 99999;
+}
+
 /* --------------------------------------- */
 /* nav */
 .navbar-brand {
