--- a/styles/markdown-style.css
+++ b/styles/markdown-style.css
@@ -1,3 +1,9 @@
+/* img */
+.img-full {
+	width: 100%;
+	height: 100%;
+}
+
 /* --------------------------------------- */
 /* post */
 .post-content .title {
@@ -151,6 +157,7 @@
 .markdownBody img {
 	width: 100%;
 	margin-bottom: 4px;
+	cursor: pointer;
 }
 
 .markdownBody .img-normal {
